  (Chen, Liu, and Chen)
* tccs/group3: On anelliptic approximations for qP velocities in TI
  and orthorhombic media (Sripanich and Fomel)
* tccs/dbortho: Iterative deblending with multiple constraints based
  on shaping regularization (Chen)
* lju/vdseislet: Signal and noise separation in prestack seismic data
  using velocity-dependent seislet transform (Liu, Fomel, and Liu)

To SCons:

* splitting auxiliary inputs when split= involves 'omp' or 'mpi'
* Upgraded to scons-2.4.1

To documentation:

To APIs:

* name= parameter in File for Python API

To the Python package:

To programs:

* user/zdzhang: New contributor (Zhendong Zhang)
* splitting auxiliary inputs in sfomp and sfmpi
* set delrt in trace headers in sfsegywrite
* header= parameter in sfcsv2rsf

===Bug fixes===

In the reproducible documents collection:

* Fixed links to the data files in the case of a non-default data server

In documentation:

* Fixed file names in selfdocs

In APIs:

In the Python package:

* Fixed parsing of comments in Fortran-90 programs

In programs:

* Fixed segmentation fault for sffft1 with no FFTW and no OMP
* Fixed case n1 > n2 in sfsvd

In the build system:

* Fixed installation of the gallery scripts
* Improved configuration for Fortran-90 programs
* Fixed Java API installation on Linux

===Changes in defaults and interfaces===

==Release 1.7 (2014-04-13)==

===Additions and enhancements===

To the reproducible documents collection:

* tccs/sglowrank: Lowrank seismic wave extrapolation on a staggered
  grid (Fang, Fomel, Du, and Hu)
* xjtu/primer: A numerical tour of wave propagation (Yang)
* Moved rsf/usp/data to data/freeusp/land and added elevation statics
* tongji/lrmode: Fast algorithms for elastic-wave-mode separation and
  vector decomposition using low-rank approximation for anisotropic
  media (Cheng and Fomel)
* tccs/deblend: Iterative deblending of simultaneous-source seismic
  data using seislet-domain shaping regularization (Chen, Fomel, and
  Hu)