@@ -1,5 +1,5 @@
 \title{Viscoacoustic modeling and imaging using low-rank approximation}
-\author{Junzhe Sun$^{*}$, Tieyuan Zhu, and Sergey Fomel, the University of Texas at Austin}
+\author{Junzhe Sun, Tieyuan Zhu, and Sergey Fomel}
 \maketitle
 
 \address{
