@@ -23,7 +23,7 @@
 #include "warp2.h"
 
 static int n1, n2, n3, nx, ny;
-static map4 map1, map3 ;
+static map4 map1;
 static float *trace1, **trace2, ***str2, ***str3, ***slice1;
 
 void warp3_init(int n1_in, float o1, float d1,
@@ -41,7 +41,6 @@ void warp3_init(int n1_in, float o1, float d1,
     nx = nx_in;
 
     map1 = stretch4_init (n1, o1, d1, nt, eps);
-    map3 = stretch4_init (n3, o3, d3, nx, eps);
 
     trace1 = sf_floatalloc(n1);
     trace2 = sf_floatalloc2(n2,n3);
@@ -145,8 +144,8 @@ void fwarp3(float ***slice2 /* [n3][n2][n1] input */,
     }
 
     for (i1=0; i1 < n1; i1++) {
-	for (i3=0; i3 < nx; i3++) {
-	    for (i2=0; i2 < ny; i2++) {
+	for (i3=0; i3 < n3; i3++) {
+	    for (i2=0; i2 < n2; i2++) {
 		trace2[i3][i2] = slice2[i3][i2][i1];
 	    }
 	}
