@@ -9,7 +9,7 @@ constpermh1 cosftwave1 cpef cr deblur distance divn dix dpeiko eikonal
 eikonalvti eno2 erf exgr fft2 fftexp0 fftexp1 fftexp3 fftone ffttest
 fftwave1 fftwave2 fftwave3 findmin2 focus fpow freqest gaussmooth
 gbeamform imray interf interp2 interpt iphase kdtree kron lfftexp0
-localskew locov lpf lrmig0 lsfit median mffit mig3 miss3 nconv nnint
+localskew locov lpf lrmig0 lsfit max2 median mffit mig3 miss3 nconv nnint
 nnshape nsmooth nsmooth1 ocparcel octentwt odip2 ofilp ofsemb opwd2
 ortho patch phaserot pick pick3 plane poly polyfit regr rdiv rect1
 reshape riesz rsin seislet1 semblance shape shapeagc shapefill shearer
