@@ -25,6 +25,8 @@ To the reproducible documents collection:
   on shaping regularization (Chen)
 * lju/vdseislet: Signal and noise separation in prestack seismic data
   using velocity-dependent seislet transform (Liu, Fomel, and Liu)
+* tccs/fraclapl: Viscoacoustic modeling and imaging using low-rank
+  approximation (Sun, Zhu, and Fomel)
 
 To SCons:
 
